# bsreadrepeater

./: .clang-format  .gitignore  CMakeLists.txt  build-local-zeromq.sh  build-local.sh  build-remote-2.sh  build-remote.sh  readme.md
include/bsreadrepeater/: bsr_chnhandler.h  bsr_cmdchn.h  bsr_ctx1.h  bsr_dummy_source.h  bsr_dummy_source_s.h  bsr_ema.h  bsr_json.h  bsr_json_commands.h  bsr_log.h  bsr_memreq.h  bsr_pod.h  bsr_poller.h  bsr_rep.h  bsr_sockhelp.h  bsr_startupcmd.h  bsr_stats.h  bsr_str.h  bsr_timed_events.h  err.h  hex.h
scripts/: bsrep.sh
src/: CMakeLists.txt  bsr_chnhandler.c  bsr_cmdchn.c  bsr_ctx1.c  bsr_dummy_source.c  bsr_ema.c  bsr_json.cpp  bsr_json_commands.cpp  bsr_memreq.c  bsr_poller.c  bsr_rep.c  bsr_sockhelp.c  bsr_startupcmd.c  bsr_stats.c  bsr_str.c  bsr_timed_events.c  hex.c  main.c
src/bitshuffle/: bitshuffle.c  bitshuffle_core.h  bitshuffle_internals.h  iochain.c
test/: client.py  command.py  setup.py  source.py
